添加图片详细见onenote 8/5
添加图片详细见onenote 8/5

--- a/day01/html01.html
+++ b/day01/html01.html
@@ -14,6 +14,7 @@
 
 </body>
 5
+<img src="IMG_1032.JPG" alt="dage" title="lol">
 </html>
 <!--问题 head title 不能直接用style改变颜色和字体大小
 title 还能理解但是为什么head 不可以-->
